fix spacing under google map

--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -636,6 +636,7 @@ h2.entry-title {
     .google-map {
             margin:auto 20px 2em;
             border:1px solid $darkgrey;
+            line-height: 0;
     }
     hr {
         height:1px;
