--- a/style.css
+++ b/style.css
@@ -2153,8 +2153,9 @@ h2.entry-title {
 /* line 636, sass/_styles.scss */
 .page-template-page-contact-php .google-map {
   margin: auto 20px 2em;
-  border: 1px solid #8e8e8e; }
-/* line 640, sass/_styles.scss */
+  border: 1px solid #8e8e8e;
+  line-height: 0; }
+/* line 641, sass/_styles.scss */
 .page-template-page-contact-php hr {
   height: 1px;
   border: 0;
@@ -2162,25 +2163,25 @@ h2.entry-title {
   margin-left: -30px;
   margin-right: -30px; }
 
-/* line 649, sass/_styles.scss */
+/* line 650, sass/_styles.scss */
 .inner-wrapper {
   margin-left: -60px;
   margin-right: -60px; }
 
-/* line 654, sass/_styles.scss */
+/* line 655, sass/_styles.scss */
 #upcoming-events {
   margin-bottom: 2em;
   background-color: #cc2933;
   padding: .5em;
   color: white;
   text-align: right; }
-  /* line 660, sass/_styles.scss */
+  /* line 661, sass/_styles.scss */
   #upcoming-events a {
     color: white;
     text-decoration: none;
     text-transform: uppercase; }
 
-/* line 666, sass/_styles.scss */
+/* line 667, sass/_styles.scss */
 .calendar-list {
   *zoom: 1; }
   /* line 18, ../../../../../../../Applications/CodeKit.app/Contents/Resources/engines/bourbon/bourbon/app/assets/stylesheets/addons/_clearfix.scss */
@@ -2190,7 +2191,7 @@ h2.entry-title {
   /* line 23, ../../../../../../../Applications/CodeKit.app/Contents/Resources/engines/bourbon/bourbon/app/assets/stylesheets/addons/_clearfix.scss */
   .calendar-list:after {
     clear: both; }
-  /* line 669, sass/_styles.scss */
+  /* line 670, sass/_styles.scss */
   .calendar-list a {
     background-color: #cc2933;
     display: block;
@@ -2202,21 +2203,21 @@ h2.entry-title {
     margin-right: 1%;
     padding: 1em .5em;
     line-height: 1.2em; }
-    /* line 680, sass/_styles.scss */
+    /* line 681, sass/_styles.scss */
     .calendar-list a:last-of-type {
       margin-right: 0; }
 
-/* line 684, sass/_styles.scss */
+/* line 685, sass/_styles.scss */
 #local-calendars a {
   width: 24.25%; }
 
-/* line 689, sass/_styles.scss */
+/* line 690, sass/_styles.scss */
 #offsite-calendars a {
   width: 32.6%;
   background-color: #8e8e8e;
   font-size: .9em; }
 
-/* line 694, sass/_styles.scss */
+/* line 695, sass/_styles.scss */
 .calendar-sidebar h5 {
   text-align: center;
   font-size: 1.2em;
@@ -2224,19 +2225,19 @@ h2.entry-title {
   color: #8e8e8e;
   text-transform: uppercase; }
 
-/* line 703, sass/_styles.scss */
+/* line 704, sass/_styles.scss */
 .page-template-page-calendar-php .hero {
   margin-top: 2em;
   margin-bottom: 1.5em;
   background-color: #e6e6e6; }
-  /* line 708, sass/_styles.scss */
+  /* line 709, sass/_styles.scss */
   .page-template-page-calendar-php .hero .column1 {
     background-color: #cc2933;
     height: 180px;
     font-size: 2em;
     text-transform: uppercase;
     text-align: center; }
-    /* line 714, sass/_styles.scss */
+    /* line 715, sass/_styles.scss */
     .page-template-page-calendar-php .hero .column1 a {
       text-decoration: none;
       color: white;
@@ -2244,29 +2245,29 @@ h2.entry-title {
       display: block;
       line-height: 1.3em;
       padding-top: 50px; }
-  /* line 723, sass/_styles.scss */
+  /* line 724, sass/_styles.scss */
   .page-template-page-calendar-php .hero .column2 {
     height: 180px;
     background-color: #e6e6e6;
     color: #8e8e8e; }
 
-/* line 731, sass/_styles.scss */
+/* line 732, sass/_styles.scss */
 .full-calendar #ai1ec-calendar-view {
   margin-top: 2em; }
-/* line 734, sass/_styles.scss */
+/* line 735, sass/_styles.scss */
 .full-calendar .ai1ec-filter-selector-container {
   display: block; }
-/* line 737, sass/_styles.scss */
+/* line 738, sass/_styles.scss */
 .full-calendar .ai1ec-filters-container {
   right: 0;
   margin: 20px 0; }
-/* line 741, sass/_styles.scss */
+/* line 742, sass/_styles.scss */
 .full-calendar #ai1ec-container {
   margin: 0; }
-/* line 744, sass/_styles.scss */
+/* line 745, sass/_styles.scss */
 .full-calendar .ai1ec-calendar-title {
   margin-left: 30px!important; }
-/* line 747, sass/_styles.scss */
+/* line 748, sass/_styles.scss */
 .full-calendar .ai1ec-title-buttons {
   margin-right: 30px!important; }
 
